[gd_scene load_steps=3 format=3 uid="uid://bera8ki23nhwd"]

[ext_resource type="Script" path="res://scenes/UI/popups.gd" id="1_w1y32"]
[ext_resource type="FontFile" uid="uid://cq0wvabi65uog" path="res://assets/fonts/Counting Apples.ttf" id="2_mfo6e"]

[node name="Popups" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
script = ExtResource("1_w1y32")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ItemPopup" type="PopupPanel" parent="UI"]
unique_name_in_owner = true
size = Vector2i(109, 100)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ItemPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 105.0
offset_bottom = 96.0

[node name="Name" type="Label" parent="UI/ItemPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_mfo6e")
theme_override_font_sizes/font_size = 25
text = "Name"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2

[node name="Price" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_mfo6e")
theme_override_font_sizes/font_size = 13
text = "Cost:"

[node name="PriceValue" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mfo6e")
theme_override_font_sizes/font_size = 13
text = "15"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2

[node name="Space" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mfo6e")
theme_override_font_sizes/font_size = 13
text = "Space:"

[node name="SpaceValue" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mfo6e")
theme_override_font_sizes/font_size = 13
text = "4"
